syntax = "proto3";
package celestia.blob.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/celestiaorg/celestia-app/x/blob/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  uint32 min_square_size = 1
      [ (gogoproto.moretags) = "yaml:\"min_square_size\"" ];
  uint32 max_square_size = 2
      [ (gogoproto.moretags) = "yaml:\"max_square_size\"" ];
  uint32 gas_per_blob_byte = 3
      [ (gogoproto.moretags) = "yaml:\"gas_per_blob_byte\"" ];
}
